# small-STL

./: CMakeLists.txt  LICENSE  Makefile  README.md
example/: main.cpp
project-headers/: array.h  iterator.h  pair.h  print_container.h  shared_ptr.h  unique_ptr.h  vector.h
small-STL-headers/: algorithm.h  array.h  vector.h
src/: main.cpp
tests/: array_tests.cpp  shared_ptr_tests.cpp  unique_ptr_tests.cpp  vector_tests.cpp
